--- a/index.html
+++ b/index.html
@@ -366,41 +366,65 @@
                   <video controls>
                     <source src="videos/case3.mp4" type="video/mp4">
                   </video>
+                  <div class="slide-extra">
+                    <p>High-fidelity identity preservation showcased in Case 5.</p>
+                  </div>
                 </div>
                 <div class="slide-item">
                   <video controls>
                     <source src="videos/case5.mp4" type="video/mp4">
                   </video>
+                  <div class="slide-extra">
+                    <p>High-fidelity identity preservation showcased in Case 5.</p>
+                  </div>
                 </div>
                 <div class="slide-item">
                   <video controls>
                     <source src="videos/case8.mp4" type="video/mp4">
                   </video>
+                  <div class="slide-extra">
+                    <p>High-fidelity identity preservation showcased in Case 5.</p>
+                  </div>
                 </div>
                 <div class="slide-item">
                   <video controls>
                     <source src="videos/case10.mp4" type="video/mp4">
                   </video>
+                  <div class="slide-extra">
+                    <p>High-fidelity identity preservation showcased in Case 5.</p>
+                  </div>
                 </div>
                 <div class="slide-item">
                   <video controls>
                     <source src="videos/case2.mp4" type="video/mp4">
                   </video>
+                  <div class="slide-extra">
+                    <p>High-fidelity identity preservation showcased in Case 5.</p>
+                  </div>
                 </div>
                 <div class="slide-item">
                   <video controls>
                     <source src="videos/case6.mp4" type="video/mp4">
                   </video>
+                  <div class="slide-extra">
+                    <p>High-fidelity identity preservation showcased in Case 5.</p>
+                  </div>
                 </div>
                 <div class="slide-item">
                   <video controls>
                     <source src="videos/case17.mp4" type="video/mp4">
                   </video>
+                  <div class="slide-extra">
+                    <p>High-fidelity identity preservation showcased in Case 5.</p>
+                  </div>
                 </div>
                 <div class="slide-item">
                   <video controls>
                     <source src="videos/case20.mp4" type="video/mp4">
                   </video>
+                  <div class="slide-extra">
+                    <p>High-fidelity identity preservation showcased in Case 5.</p>
+                  </div>
                 </div>
             </div>
             <!-- 导航按钮 -->
