--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                     <source src="videos/case3.mp4" type="video/mp4">
                   </video>
                   <div class="slide-extra">
-                    <p>High-fidelity identity preservation showcased in Case 5.</p>
+                    <p>Plushie penguin * is skateboarding with flippers through autumn pumpkin patches</p>
                   </div>
                 </div>
                 <div class="slide-item">
@@ -375,7 +375,7 @@
                     <source src="videos/case5.mp4" type="video/mp4">
                   </video>
                   <div class="slide-extra">
-                    <p>High-fidelity identity preservation showcased in Case 5.</p>
+                    <p>Dog * wearing a knitted sweater in a cozy fireplace cabin is playing guitar</p>
                   </div>
                 </div>
                 <div class="slide-item">
@@ -383,7 +383,7 @@
                     <source src="videos/case8.mp4" type="video/mp4">
                   </video>
                   <div class="slide-extra">
-                    <p>High-fidelity identity preservation showcased in Case 5.</p>
+                    <p>Toy gnome * is doing TaiChi, flowing through a slow, meditative sequence</p>
                   </div>
                 </div>
                 <div class="slide-item">
@@ -391,7 +391,7 @@
                     <source src="videos/case10.mp4" type="video/mp4">
                   </video>
                   <div class="slide-extra">
-                    <p>High-fidelity identity preservation showcased in Case 5.</p>
+                    <p>Plushie redbear * in tactical vest is surfing, gliding smoothly across curling waves</p>
                   </div>
                 </div>
                 <div class="slide-item">
@@ -399,7 +399,7 @@
                     <source src="videos/case2.mp4" type="video/mp4">
                   </video>
                   <div class="slide-extra">
-                    <p>High-fidelity identity preservation showcased in Case 5.</p>
+                    <p>Plushie wolf * is skiing carving fresh powder trails with expert balance</p>
                   </div>
                 </div>
                 <div class="slide-item">
@@ -407,7 +407,7 @@
                     <source src="videos/case6.mp4" type="video/mp4">
                   </video>
                   <div class="slide-extra">
-                    <p>High-fidelity identity preservation showcased in Case 5.</p>
+                    <p>Dog * with a diamond-studded collar in a grand ballroom is playing guitar</p>
                   </div>
                 </div>
                 <div class="slide-item">
@@ -415,7 +415,7 @@
                     <source src="videos/case17.mp4" type="video/mp4">
                   </video>
                   <div class="slide-extra">
-                    <p>High-fidelity identity preservation showcased in Case 5.</p>
+                    <p>Dog * is playing flute in a retro diner booth wearing a paper crown and ketchup-stained apron</p>
                   </div>
                 </div>
                 <div class="slide-item">
@@ -423,7 +423,7 @@
                     <source src="videos/case20.mp4" type="video/mp4">
                   </video>
                   <div class="slide-extra">
-                    <p>High-fidelity identity preservation showcased in Case 5.</p>
+                    <p>Plushie bunny * sporting a golden crown in a marble palace is doing bench press, steadily lifting the barbell with focused determination</p>
                   </div>
                 </div>
             </div>
