--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <!-- 简化样式表 -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
 
+  <link rel="icon" type="image/x-icon" href="/id_img/favicon.ico">
+
   <style>
     /* 参考网站基础样式 */
     body {
