--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
+
   <meta charset="utf-8">
   <meta name="description" content="DualReal: Adaptive Joint Training for Lossless Identity-Motion Fusion in Video Customization">
   <!-- 简化社交媒体元信息 -->
@@ -16,8 +18,6 @@
   
   <!-- 简化样式表 -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-
-  <link rel="icon" type="image/x-icon" href="/id_img/favicon.ico">
 
   <style>
     /* 参考网站基础样式 */
