--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="icon" type="image/x-icon" href="/favicon.ico">
+  <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
 
   <meta charset="utf-8">
   <meta name="description" content="DualReal: Adaptive Joint Training for Lossless Identity-Motion Fusion in Video Customization">
