--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 
       <!-- 简化按钮 -->
       <div class="buttons is-centered are-medium">
-        <a href="#paper" class="button is-rounded">
+        <a href="https://arxiv.org/abs/2505.02192" class="button is-rounded">
           <span class="icon"><i class="fas fa-file-pdf"></i></span>
           <span>Paper</span>
         </a>
