--- a/index.html
+++ b/index.html
@@ -228,8 +228,14 @@
   <section class="section">
     <div class="content-block">
       <h1 class="title paper-title has-text-centered">
-        DualReal: Adaptive Joint Training for<br>Lossless Identity-Motion Fusion
+        DualReal:<br>Adaptive Joint Training for Lossless<br>Identity-Motion Fusion in Video Customization
       </h1>
+
+      <div class="content-block" style="margin-bottom: 5px; margin-top: -10px;">
+        <span class="author-block">
+            <sup style="color: rgba(160, 26, 26, 0.874); font-size: 1.8rem; font-weight: bold;">ICCV 2025</sup>
+        </span>
+      </div>
       
       <div class="author-list has-text-centered">
         <span>
@@ -295,7 +301,7 @@
     <div class="content-block">
       <h2 class="title is-3 has-text-centered">How does it work?</h2>
       <div class="has-text-centered">
-        <img src="./img/pipeline.png" 
+        <img src="/img/pipeline.png" 
         alt="DualReal Pipeline"
         style="width: 100%; 
                 height: auto;
@@ -444,29 +450,17 @@
     </div>
   </section>
 
-<!--
-  <section class="section" style="background: #f8f9fa;">
-    <div class="content-block">
-      <h2 class="title is-3 has-text-centered">More Results</h2>
-      <div class="video-container">
-        <iframe src="https://www.youtube.com/embed/<video-youtube-id>" frameborder="0" allowfullscreen></iframe>
-      </div>
-    </div>
-  </section>
-
-
   <section class="section" style="background: #f8f9fa;">
     <div class="content-block">
       <h2 class="title is-3 has-text-centered">Citation</h2>
-      <pre style="background: #fff; padding: 1.5rem; border-radius: 4px;"><code>@article{dualreal2024,
-  title={DualReal: Adaptive Joint Training for Lossless Identity-Motion Fusion},
-  author={Wang, Wenchuan and Huang, Mengqi and Tu, Yijing and Mao, Zhendong},
-  journal={arXiv preprint arXiv:XXXX.XXXXX},
-  year={2024}
-}</code></pre>
+      <pre style="background: #fff; padding: 1.5rem; border-radius: 4px;"><code>@article{wang2025dualreal,
+        title={DualReal: Adaptive Joint Training for Lossless Identity-Motion Fusion in Video Customization},
+        author={Wang, Wenchuan and Huang, Mengqi and Tu, Yijing and Mao, Zhendong},
+        journal={arXiv preprint arXiv:2505.02192},
+        year={2025}
+      }</code></pre>
     </div>
   </section>
--->
 
   <footer class="footer">
     <div class="container">
