--- a/index.html
+++ b/index.html
@@ -232,8 +232,8 @@
       </h1>
 
       <div class="content-block" style="margin-bottom: 5px; margin-top: -10px;">
-        <span class="author-block">
-            <sup style="color: rgba(160, 26, 26, 0.874); font-size: 1.8rem; font-weight: bold;">ICCV 2025</sup>
+        <span class="author-block has-text-centered">
+            <sup style="color: rgba(182, 47, 47, 0.874); font-size: 1.8rem; font-weight: bold;">ICCV 2025</sup>
         </span>
       </div>
       
