--- a/index.html
+++ b/index.html
@@ -226,13 +226,13 @@
 <body>
   <!-- 简化Header部分 -->
   <section class="section">
-    <div class="content-block">
+    <div class="content-block has-text-centered">
       <h1 class="title paper-title has-text-centered">
         DualReal:<br>Adaptive Joint Training for Lossless<br>Identity-Motion Fusion in Video Customization
       </h1>
 
       <div class="content-block" style="margin-bottom: 5px; margin-top: -10px;">
-        <span class="author-block has-text-centered">
+        <span class="author-block">
             <sup style="color: rgba(182, 47, 47, 0.874); font-size: 1.8rem; font-weight: bold;">ICCV 2025</sup>
         </span>
       </div>
