--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
     <div class="content-block">
       <h2 class="title is-3 has-text-centered">How does it work?</h2>
       <div class="has-text-centered">
-        <img src="/img/pipeline.png" 
+        <img src="./img/pipeline.png" 
         alt="DualReal Pipeline"
         style="width: 100%; 
                 height: auto;
