--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 
       <div class="content-block" style="margin-bottom: 5px; margin-top: -10px;">
         <span class="author-block">
-            <sup style="color: rgba(182, 47, 47, 0.874); font-size: 1.8rem; font-weight: bold;">ICCV 2025</sup>
+            <sup style="color: rgba(182, 47, 47, 0.874); font-size: 1.7rem; font-weight: bold; font-family: 'Georgia';">ICCV 2025</sup>
         </span>
       </div>
       
