--- a/index.html
+++ b/index.html
@@ -260,13 +260,17 @@
 
       <!-- 简化按钮 -->
       <div class="buttons is-centered are-medium">
-        <a href="https://arxiv.org/abs/2505.02192" class="button is-rounded">
+        <a href="https://arxiv.org/pdf/2505.02192" class="button is-rounded">
           <span class="icon"><i class="fas fa-file-pdf"></i></span>
           <span>Paper</span>
         </a>
-        <a href="#code" class="button is-rounded is-dark">
+        <a href="https://github.com/wenc-k/DualReal" class="button is-rounded is-dark">
           <span class="icon"><i class="fab fa-github"></i></span>
-          <span>Code(coming soon)</span>
+          <span>Code</span>
+        </a>
+        <a href="https://arxiv.org/abs/2505.02192" class="button is-rounded is-dark">
+          <span class="icon"><i class="fab ai-arxiv"></i></span>
+          <span>Code</span>
         </a>
       </div>
 
