--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
         </a>
         <a href="https://arxiv.org/abs/2505.02192" class="button is-rounded is-dark">
           <span class="icon"><i class="fab ai-arxiv"></i></span>
-          <span>Code</span>
+          <span>Arxiv</span>
         </a>
       </div>
 
