--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     }
 
     .author-list {
-      font-size: 1.4rem;
+      font-size: 1.3rem;
       margin: 1.5rem 0;
     }
 
@@ -269,7 +269,7 @@
           <span>Code</span>
         </a>
         <a href="https://arxiv.org/abs/2505.02192" class="button is-rounded is-dark">
-          <span class="icon"><i class="fab ai-arxiv"></i></span>
+          <span class="icon"><i class="fas fa-book"></i></span>
           <span>Arxiv</span>
         </a>
       </div>
