--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
 
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/academicons@1.9.4/css/academicons.min.css">
+
   <meta charset="utf-8">
   <meta name="description" content="DualReal: Adaptive Joint Training for Lossless Identity-Motion Fusion in Video Customization">
   <!-- 简化社交媒体元信息 -->
@@ -269,7 +271,7 @@
           <span>Code</span>
         </a>
         <a href="https://arxiv.org/abs/2505.02192" class="button is-rounded is-dark">
-          <span class="icon"><i class="fas fa-book"></i></span>
+          <span class="icon"><i class="ai ai-arxiv"></i></span>
           <span>Arxiv</span>
         </a>
       </div>
