--- a/index.html
+++ b/index.html
@@ -271,7 +271,11 @@
           <span>Code</span>
         </a>
         <a href="https://arxiv.org/abs/2505.02192" class="button is-rounded is-dark">
-          <span class="icon"><i class="ai ai-arxiv"></i></span>
+          <span class="icon">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 120" height="1.2em">
+              <text x="0" y="90" font-size="90" font-family="Arial, sans-serif" fill="black">arXiv</text>
+            </svg>
+          </span>
           <span>Arxiv</span>
         </a>
       </div>
