--- a/index.html
+++ b/index.html
@@ -262,21 +262,13 @@
 
       <!-- 简化按钮 -->
       <div class="buttons is-centered are-medium">
-        <a href="https://arxiv.org/pdf/2505.02192" class="button is-rounded">
+        <a href="https://arxiv.org/abs/2505.02192" class="button is-rounded">
           <span class="icon"><i class="fas fa-file-pdf"></i></span>
-          <span>Paper</span>
+          <span>Arxiv</span>
         </a>
         <a href="https://github.com/wenc-k/DualReal" class="button is-rounded is-dark">
           <span class="icon"><i class="fab fa-github"></i></span>
           <span>Code</span>
-        </a>
-        <a href="https://arxiv.org/abs/2505.02192" class="button is-rounded is-dark">
-          <span class="icon">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 120" height="1.2em">
-              <text x="0" y="90" font-size="90" font-family="Arial, sans-serif" fill="black">arXiv</text>
-            </svg>
-          </span>
-          <span>Arxiv</span>
         </a>
       </div>
 
