--- a/index.html
+++ b/index.html
@@ -283,6 +283,15 @@
         Generated customization results of our proposed novel paradigm DualReal. Given subject images and motion videos, DualReal generates high-quality customized identity and motion simultaneously, without compromising the consistency of either dimension.
         </p>
       </div>
+    
+      <figure class="teaser-video" style="margin: 3rem auto 2rem; max-width: 1600px;">
+        <video 
+          src="videos/demo.mp4" 
+          controls 
+          style="width: 100%; height: auto; border-radius: 4px;">
+        </video>
+      </figure>
+
     </div>
   </section>
 
@@ -429,7 +438,7 @@
                     <source src="videos/case20.mp4" type="video/mp4">
                   </video>
                   <div class="slide-extra">
-                    <p>Plushie bunny * sporting a golden crown in a marble palace is doing bench press, steadily lifting the barbell with focused determination</p>
+                    <p>Plushie bunny * sporting a golden crown is doing bench press, steadily lifting the barbell with focused determination</p>
                   </div>
                 </div>
             </div>
