--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
     
       <figure class="teaser-video" style="margin: 3rem auto 2rem; max-width: 1600px;">
         <video 
-          src="videos/demo.mp4" 
+          src="./videos/demo.mp4" 
           controls 
           style="width: 100%; height: auto; border-radius: 4px;">
         </video>
