--- a/index.html
+++ b/index.html
@@ -271,14 +271,21 @@
           <span>Code</span>
         </a>
       </div>
-    
+
       <figure class="teaser-video" style="margin: 3rem auto 2rem; max-width: 1600px;">
-        <video 
-          src="./videos/demo.mp4" 
-          controls 
-          style="width: 100%; height: auto; border-radius: 4px;">
-        </video>
+        <video src="https://github.com/wenc-k/dualreal-customization/releases/download/demo/demo.mp4" controls></video>
       </figure>
+
+      <div class="teaser-image" style="margin: 3rem auto 2rem; max-width: 1600px;">
+        <img src="./img/result.png" 
+             alt="DualReal Result Showcase"
+             style="width: 100%; 
+                    height: auto;
+                    border-radius: 4px;">
+        <p>
+        Generated customization results of our proposed novel paradigm DualReal. Given subject images and motion videos, DualReal generates high-quality customized identity and motion simultaneously, without compromising the consistency of either dimension.
+        </p>
+      </div>
 
     </div>
   </section>
